# CANdevStudio

./: .appveyor.yml  .bintray-linux.json  .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.sh  .travis.yml  .travis_doxygen.sh  .trigger_appveyor.rb  CANdevResources.qrc  CMakeLists.txt  Doxyfile  README  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  bcastmsgs_8h.html  bcastmsgs_8h__dep__incl.map  bcastmsgs_8h__dep__incl.md5  bcastmsgs_8h__incl.map  bcastmsgs_8h__incl.md5  bcastmsgs_8h_source.html  canbusmodel_8hpp.html  canbusmodel_8hpp.js  canbusmodel_8hpp__dep__incl.map  canbusmodel_8hpp__dep__incl.md5  canbusmodel_8hpp__incl.map  canbusmodel_8hpp__incl.md5  canbusmodel_8hpp_source.html  candbhandler_8cpp.html  candbhandler_8cpp__incl.map  candbhandler_8cpp__incl.md5  candbhandler_8h.html  candbhandler_8h.js  candbhandler_8h__dep__incl.map  candbhandler_8h__dep__incl.md5  candbhandler_8h__incl.map  candbhandler_8h__incl.md5  (+2286 more)
src/common/: CMakeLists.txt  bcastmsgs.h  candbhandler.cpp  candbhandler.h  candbpainter.cpp  candbpainter.h  cdstableview.h  cdswidget.h  common_test.cpp  component.h  componentinterface.h  componentmodel.h  confighelpers.h  configuration.h  context.h  enumiterator.h  event.h  event_canframe.h  log.h  log.hpp  modelvisitor.h  nodepainter.h  plugin_type.h  pluginloader.h  plugins.hpp.in  propertyfields.h  sortenums.h  sortmodel.cpp  uibackend.h  uibackend.hpp  uibackendiface.h  uibackendimpls.h  version.h.in  visitablewith.h  visitor.h  withexplicitinit.h
src/common/datamodeltypes/: candbdata.h  candevicedata.h  canloaddata.h  canrawdata.h  canrawloggerdata.h  canrawviewdata.h  cansignalmodel.h  datadirection.h  rawinputdata.h
src/common/guiinterface/: checkboxinterface.h  checkboxinterface.hpp  lineeditinterface.h  lineeditinterface.hpp  nlmcheckboxinterface.hpp  nlmpushbuttoninterface.hpp  pushbuttoninterface.h  pushbuttoninterface.hpp
src/common/tests/: common_test.cpp
src/components/: CMakeLists.txt  candeviceinterface.hpp  candeviceqt.hpp  canfactory.hpp  canfactoryqt.hpp  socketcan.cpp  socketcan.h
src/components/candevice/: CMakeLists.txt  candevice.cpp  candevice.h  candevice_p.h  candevice_test.cpp  candeviceinterface.h  candeviceinterface.hpp  candevicemodel.cpp  candevicemodel.h  candevicemodel_test.cpp  candeviceplugin.h  candeviceqt.h  candeviceqt.hpp  candeviceqt_test.cpp  canfactory.hpp  canfactoryqt.hpp
src/components/candevicemodel/: candevicemodel.cpp  candevicemodel.h
src/components/canload/: CMakeLists.txt  canload.cpp  canload.h  canload_p.cpp  canload_p.h  canloadmodel.cpp  canloadmodel.h  canloadpainter.h  canloadplugin.h
src/components/canrawfilter/: CMakeLists.txt  canrawfilter.cpp  canrawfilter.h  canrawfilter_p.cpp  canrawfilter_p.h  canrawfiltermodel.cpp  canrawfiltermodel.h  canrawfilterplugin.h
src/components/canrawlogger/: CMakeLists.txt  canrawlogger.cpp  canrawlogger.h  canrawlogger_p.cpp  canrawlogger_p.h  canrawloggermodel.cpp  canrawloggermodel.h  canrawloggerplugin.h
src/components/canrawplayer/: CMakeLists.txt  canrawplayer.cpp  canrawplayer.h  canrawplayer_p.cpp  canrawplayer_p.h  canrawplayermodel.cpp  canrawplayermodel.h  canrawplayerplugin.h
src/components/canrawsender/: CMakeLists.txt  canrawsender.cpp  canrawsender.h  canrawsender.ui  canrawsender_p.cpp  canrawsender_p.h  canrawsender_test.cpp  canrawsendermodel.cpp  canrawsendermodel.h  canrawsenderplugin.h  crs_enums.h  crs_sendbutton.h  crsfactory.hpp  crsfactoryinterface.hpp  crsgui.hpp  crsguiinterface.hpp  editdelegate.cpp  editdelegate.h  newlinemanager.cpp  newlinemanager.h  nlmcheckbox.hpp  nlmfactory.h  nlmfactory.hpp  nlmfactoryinterface.h  nlmfactoryinterface.hpp  nlmlineedit.hpp  nlmlineeditinterface.hpp  nlmpushbutton.hpp  sortmodel.cpp  sortmodel.h
src/components/canrawsendermodel/: canrawsendermodel.cpp  canrawsendermodel.h
src/components/canrawview/: CMakeLists.txt  canrawview.cpp  canrawview.h  canrawview.ui  canrawview_p.cpp  canrawview_p.h  canrawviewbackend.cpp  canrawviewbackend.hpp  canrawviewmodel.cpp  canrawviewmodel.h  canrawviewplugin.h  crv_enums.h  crvfactory.hpp  crvfactoryinterface.h  crvfactoryinterface.hpp  crvgui.hpp  crvguiinterface.hpp  crvsortmodel.cpp  crvsortmodel.h  uniquefiltermodel.cpp  uniquefiltermodel.h
src/components/canrawviewmodel/: canrawviewmodel.cpp  canrawviewmodel.h
src/components/canscripter/: CMakeLists.txt  README.md  canscripter.cpp  canscripter.h  canscripter_p.h  genivi-script.json  genivi-script2.json
src/components/cansignalcoder/: CMakeLists.txt  cansignalcoder.cpp  cansignalcoder.h  cansignalcoder_p.h
src/components/cansignaldata/: CMakeLists.txt  cansignaldata.cpp  cansignaldata.h  cansignaldata_p.cpp  searchmodel.h  (+5 more)
src/gui/: CMakeLists.txt  CanDeviceManager.cpp  CanDeviceManager.hpp  PropertyEditor.cpp  PropertyEditor.h  PropertyModel.cpp  PropertyModel.h  aboutdialog.ui  cdstoolbar.cpp  cdstoolbar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  propertyeditordialog.cpp  propertyeditordialog.h  propertyeditordialog.ui  propertymodel.cpp  propertymodel.h  subwindow.h  subwindow.hpp  toolbar.ui
tests/: CMakeLists.txt  candevicemodel_test.cpp  candeviceqt_test.cpp  candevicetest.cpp  canload_test.cpp  canloadmodel_test.cpp  canrawfilter_test.cpp  canrawfiltermodel_test.cpp  canrawlogger_test.cpp  canrawloggermodel_test.cpp  canrawplayer_test.cpp  canrawplayermodel_test.cpp  canrawsender_test.cpp  canrawsendermodel_test.cpp  canrawview_test.cpp  canrawviewmodel_test.cpp  canrawviewtest.cpp  common_test.cpp  example.cpp  mainwindow.cpp  newlinemanager_test.cpp  projectconfig_test.cpp  socketcan_test.cpp
tests/configfiles/: canrawsenderconfig.cds  canrawsenderconfig_badData.cds  canrawsenderconfig_badId.cds  canrawsenderconfig_badInterval.cds  canrawsenderconfig_badcolumns.cds  canrawviewconfig.cds  canrawviewconfig_columnluck.cds  canrawviewconfig_sortingformat.cds  canrawviewconfig_visualindexproblem.cds  canrawviewconfig_widthproblem.cds  projectconfig.cds
tools/templategen/: CMakeLists.txt  main.cpp
(+4442 files in other folders)
